Trabalho-COM-AST/gram.output
Terminals unused in grammar

   LIST


Grammar

    0 $accept: programa $end

    1 programa: comando s guardar

    2 comando: abrir
    3        | nova
    4        | error comando

    5 s: s cor
    6  | s linhas
    7  | s ponto
    8  | s linha
    9  | s retangulo
   10  | s circunf
   11  | s retfill
   12  | s error
   13  | s var
   14  | s ciclo
   15  | %empty

   16 muitos: muitos c
   17       | %empty

   18 c: cor
   19  | ponto
   20  | linha
   21  | retangulo
   22  | circunf
   23  | retfill
   24  | error
   25  | var
   26  | ciclo

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

   28 var: VAR '=' varcont ';'

   29 varcont: VAR
   30        | RAIO
   31        | RAND RAIO
   32        | RAND VAR
   33        | '(' expr ')'

   34 expr: '+' list
   35     | '-' list
   36     | '*' list
   37     | '/' list

   38 list: list RAIO
   39     | list VAR
   40     | %empty

   41 retangulo: RETANGULO coordenada coordenada color ';'
   42          | RETANGULO coordenada dimensao color ';'

   43 retfill: RETFILL coordenada dimensao color ';'
   44        | RETFILL coordenada coordenada color ';'

   45 circunf: CIRCUNF coordenada opcao color ';'

   46 linha: LINHA coordenada coordenada color ';'

   47 ponto: PONTO coordenada color ';'

   48 cor: COR opcao ':' opcao ':' opcao ';'
   49    | COR COLOR ';'

   50 coordenada: opcao ',' opcao
   51           | COORDENADA

   52 color: opcao ':' opcao ':' opcao
   53      | COLOR
   54      | %empty

   55 dimensao: DIMENSAO
   56         | opcao 'x' opcao

   57 opcao: VAR
   58      | RAIO

   59 linhas: LINHAS coordenada coordenada multiplas color ';'

   60 multiplas: multiplas coordenada
   61          | %empty

   62 abrir: ABRIR '"' FILENAME '"' ';'

   63 nova: NOVA DIMENSAO COLOR ';'
   64     | NOVA DIMENSAO ';'

   65 guardar: GUARDAR '"' FILENAME '"' ';'
   66        | %empty


Terminals, with rules where they appear

$end (0) 0
'"' (34) 62 65
'(' (40) 33
')' (41) 33
'*' (42) 36
'+' (43) 34
',' (44) 50
'-' (45) 35
'.' (46) 27
'/' (47) 37
':' (58) 48 52
';' (59) 27 28 41 42 43 44 45 46 47 48 49 59 62 63 64 65
'=' (61) 28
'[' (91) 27
']' (93) 27
'x' (120) 56
error (256) 4 12 24
ABRIR (258) 62
NOVA (259) 63 64
PONTO (260) 47
LINHA (261) 46
RETANGULO (262) 41 42
RETFILL (263) 43 44
CIRCUNF (264) 45
FIM (265) 27
GUARDAR (266) 65
COR (267) 48 49
RAND (268) 31 32
PARA (269) 27
EM (270) 27
LINHAS (271) 59
LIST (272)
FAZER (273) 27
FILENAME (274) 62 65
DIMENSAO (275) 55 63 64
COORDENADA (276) 51
COLOR (277) 49 53 63
RAIO (278) 27 30 31 38 58
VAR (279) 27 28 29 32 39 57


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1, on right: 0
comando (42)
    on left: 2 3 4, on right: 1 4
s (43)
    on left: 5 6 7 8 9 10 11 12 13 14 15, on right: 1 5 6 7 8 9 10
    11 12 13 14
muitos (44)
    on left: 16 17, on right: 16 27
c (45)
    on left: 18 19 20 21 22 23 24 25 26, on right: 16
ciclo (46)
    on left: 27, on right: 14 26
var (47)
    on left: 28, on right: 13 25
varcont (48)
    on left: 29 30 31 32 33, on right: 28
expr (49)
    on left: 34 35 36 37, on right: 33
list (50)
    on left: 38 39 40, on right: 34 35 36 37 38 39
retangulo (51)
    on left: 41 42, on right: 9 21
retfill (52)
    on left: 43 44, on right: 11 23
circunf (53)
    on left: 45, on right: 10 22
linha (54)
    on left: 46, on right: 8 20
ponto (55)
    on left: 47, on right: 7 19
cor (56)
    on left: 48 49, on right: 5 18
coordenada (57)
    on left: 50 51, on right: 41 42 43 44 45 46 47 59 60
color (58)
    on left: 52 53 54, on right: 41 42 43 44 45 46 47 59
dimensao (59)
    on left: 55 56, on right: 42 43
opcao (60)
    on left: 57 58, on right: 45 48 50 52 56
linhas (61)
    on left: 59, on right: 6
multiplas (62)
    on left: 60 61, on right: 59 60
abrir (63)
    on left: 62, on right: 2
nova (64)
    on left: 63 64, on right: 3
guardar (65)
    on left: 65 66, on right: 1


State 0

    0 $accept: . programa $end

    error  shift, and go to state 1
    ABRIR  shift, and go to state 2
    NOVA   shift, and go to state 3

    programa  go to state 4
    comando   go to state 5
    abrir     go to state 6
    nova      go to state 7


State 1

    4 comando: error . comando

    error  shift, and go to state 1
    ABRIR  shift, and go to state 2
    NOVA   shift, and go to state 3

    comando  go to state 8
    abrir    go to state 6
    nova     go to state 7


State 2

   62 abrir: ABRIR . '"' FILENAME '"' ';'

    '"'  shift, and go to state 9


State 3

   63 nova: NOVA . DIMENSAO COLOR ';'
   64     | NOVA . DIMENSAO ';'

    DIMENSAO  shift, and go to state 10


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 11


State 5

    1 programa: comando . s guardar

    $default  reduce using rule 15 (s)

    s  go to state 12


State 6

    2 comando: abrir .

    $default  reduce using rule 2 (comando)


State 7

    3 comando: nova .

    $default  reduce using rule 3 (comando)


State 8

    4 comando: error comando .

    $default  reduce using rule 4 (comando)


State 9

   62 abrir: ABRIR '"' . FILENAME '"' ';'

    FILENAME  shift, and go to state 13


State 10

   63 nova: NOVA DIMENSAO . COLOR ';'
   64     | NOVA DIMENSAO . ';'

    COLOR  shift, and go to state 14
    ';'    shift, and go to state 15


State 11

    0 $accept: programa $end .

    $default  accept


State 12

    1 programa: comando s . guardar
    5 s: s . cor
    6  | s . linhas
    7  | s . ponto
    8  | s . linha
    9  | s . retangulo
   10  | s . circunf
   11  | s . retfill
   12  | s . error
   13  | s . var
   14  | s . ciclo

    error      shift, and go to state 16
    PONTO      shift, and go to state 17
    LINHA      shift, and go to state 18
    RETANGULO  shift, and go to state 19
    RETFILL    shift, and go to state 20
    CIRCUNF    shift, and go to state 21
    GUARDAR    shift, and go to state 22
    COR        shift, and go to state 23
    PARA       shift, and go to state 24
    LINHAS     shift, and go to state 25
    VAR        shift, and go to state 26

    $end  reduce using rule 66 (guardar)

    ciclo      go to state 27
    var        go to state 28
    retangulo  go to state 29
    retfill    go to state 30
    circunf    go to state 31
    linha      go to state 32
    ponto      go to state 33
    cor        go to state 34
    linhas     go to state 35
    guardar    go to state 36


State 13

   62 abrir: ABRIR '"' FILENAME . '"' ';'

    '"'  shift, and go to state 37


State 14

   63 nova: NOVA DIMENSAO COLOR . ';'

    ';'  shift, and go to state 38


State 15

   64 nova: NOVA DIMENSAO ';' .

    $default  reduce using rule 64 (nova)


State 16

   12 s: s error .

    $default  reduce using rule 12 (s)


State 17

   47 ponto: PONTO . coordenada color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 42
    opcao       go to state 43


State 18

   46 linha: LINHA . coordenada coordenada color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 44
    opcao       go to state 43


State 19

   41 retangulo: RETANGULO . coordenada coordenada color ';'
   42          | RETANGULO . coordenada dimensao color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 45
    opcao       go to state 43


State 20

   43 retfill: RETFILL . coordenada dimensao color ';'
   44        | RETFILL . coordenada coordenada color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 46
    opcao       go to state 43


State 21

   45 circunf: CIRCUNF . coordenada opcao color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 47
    opcao       go to state 43


State 22

   65 guardar: GUARDAR . '"' FILENAME '"' ';'

    '"'  shift, and go to state 48


State 23

   48 cor: COR . opcao ':' opcao ':' opcao ';'
   49    | COR . COLOR ';'

    COLOR  shift, and go to state 49
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    opcao  go to state 50


State 24

   27 ciclo: PARA . VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

    VAR  shift, and go to state 51


State 25

   59 linhas: LINHAS . coordenada coordenada multiplas color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 52
    opcao       go to state 43


State 26

   28 var: VAR . '=' varcont ';'

    '='  shift, and go to state 53


State 27

   14 s: s ciclo .

    $default  reduce using rule 14 (s)


State 28

   13 s: s var .

    $default  reduce using rule 13 (s)


State 29

    9 s: s retangulo .

    $default  reduce using rule 9 (s)


State 30

   11 s: s retfill .

    $default  reduce using rule 11 (s)


State 31

   10 s: s circunf .

    $default  reduce using rule 10 (s)


State 32

    8 s: s linha .

    $default  reduce using rule 8 (s)


State 33

    7 s: s ponto .

    $default  reduce using rule 7 (s)


State 34

    5 s: s cor .

    $default  reduce using rule 5 (s)


State 35

    6 s: s linhas .

    $default  reduce using rule 6 (s)


State 36

    1 programa: comando s guardar .

    $default  reduce using rule 1 (programa)


State 37

   62 abrir: ABRIR '"' FILENAME '"' . ';'

    ';'  shift, and go to state 54


State 38

   63 nova: NOVA DIMENSAO COLOR ';' .

    $default  reduce using rule 63 (nova)


State 39

   51 coordenada: COORDENADA .

    $default  reduce using rule 51 (coordenada)


State 40

   58 opcao: RAIO .

    $default  reduce using rule 58 (opcao)


State 41

   57 opcao: VAR .

    $default  reduce using rule 57 (opcao)


State 42

   47 ponto: PONTO coordenada . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 56
    opcao  go to state 57


State 43

   50 coordenada: opcao . ',' opcao

    ','  shift, and go to state 58


State 44

   46 linha: LINHA coordenada . coordenada color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 59
    opcao       go to state 43


State 45

   41 retangulo: RETANGULO coordenada . coordenada color ';'
   42          | RETANGULO coordenada . dimensao color ';'

    DIMENSAO    shift, and go to state 60
    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 61
    dimensao    go to state 62
    opcao       go to state 63


State 46

   43 retfill: RETFILL coordenada . dimensao color ';'
   44        | RETFILL coordenada . coordenada color ';'

    DIMENSAO    shift, and go to state 60
    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 64
    dimensao    go to state 65
    opcao       go to state 63


State 47

   45 circunf: CIRCUNF coordenada . opcao color ';'

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 66


State 48

   65 guardar: GUARDAR '"' . FILENAME '"' ';'

    FILENAME  shift, and go to state 67


State 49

   49 cor: COR COLOR . ';'

    ';'  shift, and go to state 68


State 50

   48 cor: COR opcao . ':' opcao ':' opcao ';'

    ':'  shift, and go to state 69


State 51

   27 ciclo: PARA VAR . EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

    EM  shift, and go to state 70


State 52

   59 linhas: LINHAS coordenada . coordenada multiplas color ';'

    COORDENADA  shift, and go to state 39
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    coordenada  go to state 71
    opcao       go to state 43


State 53

   28 var: VAR '=' . varcont ';'

    RAND  shift, and go to state 72
    RAIO  shift, and go to state 73
    VAR   shift, and go to state 74
    '('   shift, and go to state 75

    varcont  go to state 76


State 54

   62 abrir: ABRIR '"' FILENAME '"' ';' .

    $default  reduce using rule 62 (abrir)


State 55

   53 color: COLOR .

    $default  reduce using rule 53 (color)


State 56

   47 ponto: PONTO coordenada color . ';'

    ';'  shift, and go to state 77


State 57

   52 color: opcao . ':' opcao ':' opcao

    ':'  shift, and go to state 78


State 58

   50 coordenada: opcao ',' . opcao

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 79


State 59

   46 linha: LINHA coordenada coordenada . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 80
    opcao  go to state 57


State 60

   55 dimensao: DIMENSAO .

    $default  reduce using rule 55 (dimensao)


State 61

   41 retangulo: RETANGULO coordenada coordenada . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 81
    opcao  go to state 57


State 62

   42 retangulo: RETANGULO coordenada dimensao . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 82
    opcao  go to state 57


State 63

   50 coordenada: opcao . ',' opcao
   56 dimensao: opcao . 'x' opcao

    ','  shift, and go to state 58
    'x'  shift, and go to state 83


State 64

   44 retfill: RETFILL coordenada coordenada . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 84
    opcao  go to state 57


State 65

   43 retfill: RETFILL coordenada dimensao . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 85
    opcao  go to state 57


State 66

   45 circunf: CIRCUNF coordenada opcao . color ';'

    COLOR  shift, and go to state 55
    RAIO   shift, and go to state 40
    VAR    shift, and go to state 41

    $default  reduce using rule 54 (color)

    color  go to state 86
    opcao  go to state 57


State 67

   65 guardar: GUARDAR '"' FILENAME . '"' ';'

    '"'  shift, and go to state 87


State 68

   49 cor: COR COLOR ';' .

    $default  reduce using rule 49 (cor)


State 69

   48 cor: COR opcao ':' . opcao ':' opcao ';'

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 88


State 70

   27 ciclo: PARA VAR EM . '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

    '['  shift, and go to state 89


State 71

   59 linhas: LINHAS coordenada coordenada . multiplas color ';'

    $default  reduce using rule 61 (multiplas)

    multiplas  go to state 90


State 72

   31 varcont: RAND . RAIO
   32        | RAND . VAR

    RAIO  shift, and go to state 91
    VAR   shift, and go to state 92


State 73

   30 varcont: RAIO .

    $default  reduce using rule 30 (varcont)


State 74

   29 varcont: VAR .

    $default  reduce using rule 29 (varcont)


State 75

   33 varcont: '(' . expr ')'

    '+'  shift, and go to state 93
    '-'  shift, and go to state 94
    '*'  shift, and go to state 95
    '/'  shift, and go to state 96

    expr  go to state 97


State 76

   28 var: VAR '=' varcont . ';'

    ';'  shift, and go to state 98


State 77

   47 ponto: PONTO coordenada color ';' .

    $default  reduce using rule 47 (ponto)


State 78

   52 color: opcao ':' . opcao ':' opcao

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 99


State 79

   50 coordenada: opcao ',' opcao .

    $default  reduce using rule 50 (coordenada)


State 80

   46 linha: LINHA coordenada coordenada color . ';'

    ';'  shift, and go to state 100


State 81

   41 retangulo: RETANGULO coordenada coordenada color . ';'

    ';'  shift, and go to state 101


State 82

   42 retangulo: RETANGULO coordenada dimensao color . ';'

    ';'  shift, and go to state 102


State 83

   56 dimensao: opcao 'x' . opcao

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 103


State 84

   44 retfill: RETFILL coordenada coordenada color . ';'

    ';'  shift, and go to state 104


State 85

   43 retfill: RETFILL coordenada dimensao color . ';'

    ';'  shift, and go to state 105


State 86

   45 circunf: CIRCUNF coordenada opcao color . ';'

    ';'  shift, and go to state 106


State 87

   65 guardar: GUARDAR '"' FILENAME '"' . ';'

    ';'  shift, and go to state 107


State 88

   48 cor: COR opcao ':' opcao . ':' opcao ';'

    ':'  shift, and go to state 108


State 89

   27 ciclo: PARA VAR EM '[' . RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

    RAIO  shift, and go to state 109


State 90

   59 linhas: LINHAS coordenada coordenada multiplas . color ';'
   60 multiplas: multiplas . coordenada

    COORDENADA  shift, and go to state 39
    COLOR       shift, and go to state 55
    RAIO        shift, and go to state 40
    VAR         shift, and go to state 41

    $default  reduce using rule 54 (color)

    coordenada  go to state 110
    color       go to state 111
    opcao       go to state 112


State 91

   31 varcont: RAND RAIO .

    $default  reduce using rule 31 (varcont)


State 92

   32 varcont: RAND VAR .

    $default  reduce using rule 32 (varcont)


State 93

   34 expr: '+' . list

    $default  reduce using rule 40 (list)

    list  go to state 113


State 94

   35 expr: '-' . list

    $default  reduce using rule 40 (list)

    list  go to state 114


State 95

   36 expr: '*' . list

    $default  reduce using rule 40 (list)

    list  go to state 115


State 96

   37 expr: '/' . list

    $default  reduce using rule 40 (list)

    list  go to state 116


State 97

   33 varcont: '(' expr . ')'

    ')'  shift, and go to state 117


State 98

   28 var: VAR '=' varcont ';' .

    $default  reduce using rule 28 (var)


State 99

   52 color: opcao ':' opcao . ':' opcao

    ':'  shift, and go to state 118


State 100

   46 linha: LINHA coordenada coordenada color ';' .

    $default  reduce using rule 46 (linha)


State 101

   41 retangulo: RETANGULO coordenada coordenada color ';' .

    $default  reduce using rule 41 (retangulo)


State 102

   42 retangulo: RETANGULO coordenada dimensao color ';' .

    $default  reduce using rule 42 (retangulo)


State 103

   56 dimensao: opcao 'x' opcao .

    $default  reduce using rule 56 (dimensao)


State 104

   44 retfill: RETFILL coordenada coordenada color ';' .

    $default  reduce using rule 44 (retfill)


State 105

   43 retfill: RETFILL coordenada dimensao color ';' .

    $default  reduce using rule 43 (retfill)


State 106

   45 circunf: CIRCUNF coordenada opcao color ';' .

    $default  reduce using rule 45 (circunf)


State 107

   65 guardar: GUARDAR '"' FILENAME '"' ';' .

    $default  reduce using rule 65 (guardar)


State 108

   48 cor: COR opcao ':' opcao ':' . opcao ';'

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 119


State 109

   27 ciclo: PARA VAR EM '[' RAIO . '.' '.' RAIO ']' FAZER muitos FIM PARA ';'

    '.'  shift, and go to state 120


State 110

   60 multiplas: multiplas coordenada .

    $default  reduce using rule 60 (multiplas)


State 111

   59 linhas: LINHAS coordenada coordenada multiplas color . ';'

    ';'  shift, and go to state 121


State 112

   50 coordenada: opcao . ',' opcao
   52 color: opcao . ':' opcao ':' opcao

    ':'  shift, and go to state 78
    ','  shift, and go to state 58


State 113

   34 expr: '+' list .
   38 list: list . RAIO
   39     | list . VAR

    RAIO  shift, and go to state 122
    VAR   shift, and go to state 123

    $default  reduce using rule 34 (expr)


State 114

   35 expr: '-' list .
   38 list: list . RAIO
   39     | list . VAR

    RAIO  shift, and go to state 122
    VAR   shift, and go to state 123

    $default  reduce using rule 35 (expr)


State 115

   36 expr: '*' list .
   38 list: list . RAIO
   39     | list . VAR

    RAIO  shift, and go to state 122
    VAR   shift, and go to state 123

    $default  reduce using rule 36 (expr)


State 116

   37 expr: '/' list .
   38 list: list . RAIO
   39     | list . VAR

    RAIO  shift, and go to state 122
    VAR   shift, and go to state 123

    $default  reduce using rule 37 (expr)


State 117

   33 varcont: '(' expr ')' .

    $default  reduce using rule 33 (varcont)


State 118

   52 color: opcao ':' opcao ':' . opcao

    RAIO  shift, and go to state 40
    VAR   shift, and go to state 41

    opcao  go to state 124


State 119

   48 cor: COR opcao ':' opcao ':' opcao . ';'

    ';'  shift, and go to state 125


State 120

   27 ciclo: PARA VAR EM '[' RAIO '.' . '.' RAIO ']' FAZER muitos FIM PARA ';'

    '.'  shift, and go to state 126


State 121

   59 linhas: LINHAS coordenada coordenada multiplas color ';' .

    $default  reduce using rule 59 (linhas)


State 122

   38 list: list RAIO .

    $default  reduce using rule 38 (list)


State 123

   39 list: list VAR .

    $default  reduce using rule 39 (list)


State 124

   52 color: opcao ':' opcao ':' opcao .

    $default  reduce using rule 52 (color)


State 125

   48 cor: COR opcao ':' opcao ':' opcao ';' .

    $default  reduce using rule 48 (cor)


State 126

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' . RAIO ']' FAZER muitos FIM PARA ';'

    RAIO  shift, and go to state 127


State 127

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO . ']' FAZER muitos FIM PARA ';'

    ']'  shift, and go to state 128


State 128

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' . FAZER muitos FIM PARA ';'

    FAZER  shift, and go to state 129


State 129

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER . muitos FIM PARA ';'

    $default  reduce using rule 17 (muitos)

    muitos  go to state 130


State 130

   16 muitos: muitos . c
   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos . FIM PARA ';'

    error      shift, and go to state 131
    PONTO      shift, and go to state 17
    LINHA      shift, and go to state 18
    RETANGULO  shift, and go to state 19
    RETFILL    shift, and go to state 20
    CIRCUNF    shift, and go to state 21
    FIM        shift, and go to state 132
    COR        shift, and go to state 23
    PARA       shift, and go to state 24
    VAR        shift, and go to state 26

    c          go to state 133
    ciclo      go to state 134
    var        go to state 135
    retangulo  go to state 136
    retfill    go to state 137
    circunf    go to state 138
    linha      go to state 139
    ponto      go to state 140
    cor        go to state 141


State 131

   24 c: error .

    $default  reduce using rule 24 (c)


State 132

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM . PARA ';'

    PARA  shift, and go to state 142


State 133

   16 muitos: muitos c .

    $default  reduce using rule 16 (muitos)


State 134

   26 c: ciclo .

    $default  reduce using rule 26 (c)


State 135

   25 c: var .

    $default  reduce using rule 25 (c)


State 136

   21 c: retangulo .

    $default  reduce using rule 21 (c)


State 137

   23 c: retfill .

    $default  reduce using rule 23 (c)


State 138

   22 c: circunf .

    $default  reduce using rule 22 (c)


State 139

   20 c: linha .

    $default  reduce using rule 20 (c)


State 140

   19 c: ponto .

    $default  reduce using rule 19 (c)


State 141

   18 c: cor .

    $default  reduce using rule 18 (c)


State 142

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA . ';'

    ';'  shift, and go to state 143


State 143

   27 ciclo: PARA VAR EM '[' RAIO '.' '.' RAIO ']' FAZER muitos FIM PARA ';' .

    $default  reduce using rule 27 (ciclo)
